# holochain

crates/fixt/src/: bool.rs  bytes.rs  lib.rs  number.rs  serialized_bytes.rs  string.rs
crates/holo_hash/src/: fixt.rs
crates/kitsune_p2p/proxy/: Cargo.toml
crates/kitsune_p2p/proxy/src/: inner_con.rs  inner_listen.rs  lib.rs  wire.rs
crates/kitsune_p2p/types/: Cargo.toml
crates/kitsune_p2p/types/src/: lib.rs  peer_discover.rs
crates/types/: Cargo.toml
crates/types/src/: fixt.rs
crates/zome_types/src/: fixt.rs  zome_io.rs
