[package]
name = "kitsune_p2p_types"
version = "0.0.1"
description = "types subcrate for kitsune-p2p"
license = "Apache-2.0"
homepage = "https://github.com/Holo-host/holochain"
documentation = "https://github.com/Holo-host/holochain"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = [ "holochain", "holo", "p2p", "dht", "networking" ]
categories = [ "network-programming" ]
edition = "2018"

[dependencies]
base64 = "0.12"
byteorder = "1.3"
chrono = "0.4"
futures = "0.3"
ghost_actor = "0.2.0"
ring = "0.16.11"
thiserror = "1.0.18"
tokio = { version = "0.2", features = [ "full" ] }
url2 = "0.0.5"
